--- a/src/app/sections/store-header/store-header.component.html
+++ b/src/app/sections/store-header/store-header.component.html
@@ -1,6 +1,8 @@
-<div class="flex h-20 items-center place-content-center">
-  <app-store-logo class="flex-initial w-[200px] mr-2.5"></app-store-logo>
-  <app-store-search class="flex-grow mx-2.5"></app-store-search>
-  <app-header-blocks-list class="flex-initial ml-2.5"></app-header-blocks-list>
+<div class="flex-1">
+  <div class="flex container h-20 items-center">
+    <app-store-logo class="flex-initial w-[200px] mr-5"></app-store-logo>
+    <app-store-search class="flex-grow mx-5"></app-store-search>
+    <app-header-blocks-list class="flex-initial ml-5"></app-header-blocks-list>
+  </div>
 </div>
-<app-header-navigation></app-header-navigation>
+<app-header-navigation class="flex"></app-header-navigation>
