--- a/src/app/components/store-search/store-search.component.html
+++ b/src/app/components/store-search/store-search.component.html
@@ -1,4 +1,4 @@
-<div [formGroup]="searchGroup" class="relative">
+<form [formGroup]="searchGroup" class="relative">
   <input pInputText type="search" class="w-full rounded-full p-inputtext-sm" placeholder="Search" formControlName="search"/>
   <p-button icon="pi pi-search" styleClass="absolute right-1 top-1 p-button-sm p-button-rounded p-button-info"></p-button>
-</div>
+</form>
